# zk-snark-voting

./: .gitignore  LICENSE.md  MANIFEST.in  Makefile  NullVote.r1cs  NullVote.sym  README.md  app.py  circuit.r1cs  circuit.sym  package-lock.json  package.json  pyvenv.cfg  requirements.txt  setup.cfg
circom/: 022a73ad-ceeb-4b0a-87d1-90b97a4aaa43.ptau  circuit.r1cs  circuit.sym  witness.wtns
circom/circuit_js/: circuit.wasm
circom2/: 1b4bf03e-afac-4ee0-985c-c675592fe8ff.ptau  50d40e9c-e7ea-4d37-b8f1-c3721e8a3bfb.zkey  cf1d9156-0e9e-4158-9c2e-3935fd7e1bea.zkey  input.json
circom3/: bb4f7d4a-cf0b-4005-8506-c4b34aac6cf8.zkey  circuit.circom  circuit.r1cs  proof.json  public.json
circom4/: proof.json
circom4/circuit_js/: circuit.wasm
circuit_cpp/: circuit.cpp
circuits/AndCircuit/: circuit.circom  input_false_and_false.json  input_true_and_true.json
circuits/CommitmentCircuit/: circuit.circom  circuit.r1cs  circuit.sym  e5563bbd-62c1-463d-b7f0-158f1f94f2ed.zkey  final.zkey  input.json  proof.json  public.json  test  vkey.json  witness.wtns
circuits/FullCircuit/: 59383cb3-b831-4722-bb7a-ce3eb6694a30.zkey  NullVote.circom  NullVote.r1cs  NullVote.sym  Vote.circom  circuit.circom  circuit.r1cs  (+10 more)
docs/: VotingProcess.md  ZkProcess.md
protocol_project/: README.md  setup.py
pyseidon/: constants.py  posiedon.py  rewrite-constants.py
setupDiagram/: setupDiagram.md
src/: bulletinboard.py  merkly.py  registration.py  setup.py  tally.py  utility.py  voting.py
tests/: test_registration.py  test_setup.py  test_tally.py  test_verification.py  test_voting.py
(+100 files in other folders)
