[metadata]
name = zk_snark_voting
version = 1.0.0
license = MIT
description = Zk-snark-voting Protocol
long_description = file: README.md
author = Frederik & Isabella
classifiers=
   Development Status :: 2 - Pre-Alpha
   Natural Language :: English
   Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =

[options.packages.find]
where=src